development of redis for code confirmation was starting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,15 @@ services:
     networks:
       - mynetwork
 
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - "6378:6379" 
+    networks:
+      - mynetwork
+
+
 networks:
   mynetwork:
     driver: bridge
